[workspace]
members = [
    # all crates in a `./crates` folder will be added to the workspace
    "crates/*",
]

[workspace.dependencies]
derive_more = "0.99.17"
bigdecimal = { version = "0.3.1", features = ["serde"] }
miette = "5.5.0"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"